[EFL] Fix the problem in which environment variable included in webprocess-cmd-prefix can't be parsed https://bugs.webkit.org/show_bug.cgi?id=148616

Patch by Joonghun Park <jh718.park@samsung.com> on 2015-10-14
Reviewed by Gyuyoung Kim.

This patch fixes the problem in which environment variable in web process-cmd-prefix can't be parsed.
process-cmd-prefix option doesn't work in two cases.
1. When executing run-layout-tests,
2. When executing MiniBrowser with web process-cmd-prefix environment variable.

* UIProcess/Launcher/efl/ProcessLauncherEfl.cpp:
(WebKit::parseAndRemoveEnvironments):
(WebKit::ProcessLauncher::launchProcess):

Canonical link: https://commits.webkit.org/168258@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@191041 268f45cc-cd09-0410-ab3c-d52691b4dbfc