Source/WebKit2/UIProcess/Launcher/efl/ProcessLauncherEfl.cpp
@@ -65,6 +65,36 @@ static Vector<std::unique_ptr<char[]>> createArgsArray(const String& prefix, con
     return args;
 }
 
+static void parseAndRemoveEnvironments(Vector<std::unique_ptr<char[]>>&& args)
+{
+    // Handle environment variable specified before executable file name only for this process use.
+    auto end = args.end();
+    auto it = args.begin();
+    int argsLength = 0;
+
+    for (; it != end; ++it) {
+        const char* key;
+        const char* value;
+        auto arg = (*it).get();
+
+        if (strchr(arg, '=') == nullptr)
+            break;
+
+        key = strtok(arg, "=");
+        value = strtok(nullptr, "=");
+
+        if (key == nullptr) {
+            argsLength++;
+            continue;
+        }
+
+        setenv(key, value, 1);
+        argsLength++;
+    }
+
+    args.remove(0, argsLength);
+}
+
 void ProcessLauncher::launchProcess()
 {
     int sockets[2];
@@ -104,6 +134,8 @@ void ProcessLauncher::launchProcess()
         processCmdPrefix = m_launchOptions.processCmdPrefix;
 #endif
     auto args = createArgsArray(processCmdPrefix, executablePath, String::number(sockets[0]), pluginPath);
+
+    parseAndRemoveEnvironments(WTF::move(args));
 
     // Do not perform memory allocation in the middle of the fork()
     // exec() below. FastMalloc can potentially deadlock because
